Fix overflow problem and designed mobile menu

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,11 @@
 html, body {
-  margin:0;
-  padding:0;
-  height:100%;
-  width:100%;
+  height: 100%;
+  /*overflow: hidden;*/
+}
+
+body {
   font-family: "Raleway";
-  overflow-x: hidden;
+  -webkit-text-size-adjust: 100%;
 }
 
 .navbar {
@@ -12,6 +13,9 @@ html, body {
   margin-bottom: 0px;
   border-bottom: 0px;
   font-weight: 300;
+  display: inline-block;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .navbar-default .navbar-header a,
@@ -29,6 +33,8 @@ html, body {
 
 .navbar-header button {
   border: none;
+  float: left;
+  margin-left: 20px;
 }
 
 .navbar-nav {
@@ -187,7 +193,21 @@ footer {
   color: black;
 }
 
-@media screen and (max-width:769px) {
+@media only screen and (max-width:769px) {
+  .navbar {
+    background: transparent;
+  }
+
+  .navbar-default .navbar-header a,
+  .navbar-default .nav li a {
+    color: white;
+    font-weight: 400;
+    font-size: 24px;
+    letter-spacing: 0.2em;
+    background-color: navy;
+    line-height: 1.4;
+  }
+
   #profile-pic {
     height: 200px;
     width: 356.178px;
